--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>manag</name>
 	<description>etapa 7-9 pi</description>
+        <packaging>war</packaging>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -64,6 +65,7 @@
 	</dependencies>
 
 	<build>
+            <finalName>${artifactId}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
