implementação do metodo cadastrado

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/village_bd
+spring.datasource.url=jdbc:mysql://localhost:3306/manage
 spring.datasource.username=root
 spring.datasource.password=C14825927rds
 server.port=8080
